--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p> My name is Xavier</p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVdTAa2qPuS39qhBu_r-jBlNW86KP0h1loy7mks5-d0EZN6KXFE_auFBKZ4Nz0uO3Fizc&usqp=CAU"
 </body>
-</html>
+</html> 
